Add AGPL-3.0-only license to package.json files and create LICENSE file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jiobase",
   "private": true,
+  "license": "AGPL-3.0-only",
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
