--- a/apps/proxy/package.json
+++ b/apps/proxy/package.json
@@ -2,6 +2,7 @@
   "name": "@jiobase/proxy",
   "version": "0.0.1",
   "private": true,
+  "license": "AGPL-3.0-only",
   "type": "module",
   "scripts": {
     "dev": "wrangler dev",
