--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@jiobase/web",
   "private": true,
+  "license": "AGPL-3.0-only",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
